// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlertBanner > renders error type 1`] = `
<div
  class="w-full border-l-4 px-4 py-3 flex items-start gap-3 rounded-r border-red bg-red/5"
  role="alert"
>
  <div
    class="flex-1"
  >
    <p
      class="font-display text-xs uppercase tracking-widest text-text"
    >
      Error Message
    </p>
  </div>
</div>
`;

exports[`AlertBanner > renders info type 1`] = `
<div
  class="w-full border-l-4 px-4 py-3 flex items-start gap-3 rounded-r border-cyan bg-cyan/5"
  role="alert"
>
  <div
    class="flex-1"
  >
    <p
      class="font-display text-xs uppercase tracking-widest text-text"
    >
      Info Message
    </p>
  </div>
</div>
`;

exports[`AlertBanner > renders success type 1`] = `
<div
  class="w-full border-l-4 px-4 py-3 flex items-start gap-3 rounded-r border-green bg-green/5"
  role="alert"
>
  <div
    class="flex-1"
  >
    <p
      class="font-display text-xs uppercase tracking-widest text-text"
    >
      Success Message
    </p>
  </div>
</div>
`;

exports[`AlertBanner > renders warning type 1`] = `
<div
  class="w-full border-l-4 px-4 py-3 flex items-start gap-3 rounded-r border-orange bg-orange/5"
  role="alert"
>
  <div
    class="flex-1"
  >
    <p
      class="font-display text-xs uppercase tracking-widest text-text"
    >
      Warning Message
    </p>
  </div>
</div>
`;
